feat: add EDUCATIONAL content domain (v0.3.0)
Add domain for educational platforms (Khan Academy, OpenStax, Coursera,
edX, Brilliant, CK-12, NCTM, etc.) with calibrated Bayesian priors:
prior=0.65, threshold=0.50, bayesianThreshold=0.65.

Classification priority: ACADEMIC > NEWS > GOVERNMENT > EDUCATIONAL > GENERAL.
Layers: url(0.30) + title_search(0.10) + ai(0.60).

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sottofm/verification-standard",
-  "version": "0.2.0",
-  "description": "Open, domain-aware reference verification standard for academic, news, government, and general sources",
+  "version": "0.3.0",
+  "description": "Open, domain-aware reference verification standard for academic, news, government, educational, and general sources",
   "keywords": [
     "reference-verification",
     "citation",
